<?xml version="1.0"?>
<package>
  <name>ros_snappy_example</name>
  <version>0.0.0</version>
  <description>Simple Python publisher and C++ subscriber with launchfile</description>

  <maintainer email="jackie@osrfoundation.org">Jackie Kay</maintainer>

  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
